<resources>
    <string name="ui_default_package">com.android.dialer</string>
    <string name="incall_default_class">com.android.incallui.CallHandlerService</string>
    <string name="dialer_default_class">com.android.dialer.DialtactsActivity</string>
    <string name="carrier_settings" />
    <string name="carrier_settings_menu" />
    <string name="Lch_dtmf_key">D</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input" formatted="false">USSD message must be between %d and %d characters. Please try again.</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="ok">OK</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="label_nsdp">SIM network subset unlock PIN</string>
    <string name="label_cdp">SIM corporate unlock PIN</string>
    <string name="label_spdp">SIM service provider unlock PIN</string>
    <string name="label_sdp">SIM unlock PIN</string>
    <string name="label_rn1dp">RUIM network1 unlock PIN</string>
    <string name="label_rn2dp">RUIM network2 unlock PIN</string>
    <string name="label_rhrpd">RUIM hrpd unlock PIN</string>
    <string name="label_rcdp">RUIM corporate unlock PIN</string>
    <string name="label_rspdp">RUIM service provider unlock PIN</string>
    <string name="label_rdp">RUIM unlock PIN</string>
    <string name="label_puk">Enter PUK</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting SIM network unlock…</string>
    <string name="requesting_nw_subset_unlock">Requesting SIM network subset unlock…</string>
    <string name="requesting_sp_unlock">Requesting SIM service provider unlock…</string>
    <string name="requesting_corporate_unlock">Requesting SIM corporate unlock…</string>
    <string name="requesting_sim_unlock">Requesting SIM unlock…</string>
    <string name="requesting_rnw1_unlock">Requesting RUIM network1 unlock…</string>
    <string name="requesting_rnw2_unlock">Requesting RUIM network2 unlock…</string>
    <string name="requesting_rhrpd_unlock">Requesting RUIM hrpd unlock…</string>
    <string name="requesting_rsp_unlock">Requesting RUIM service provider unlock…</string>
    <string name="requesting_rc_unlock">Requesting RUIM corporate unlock…</string>
    <string name="requesting_ruim_unlock">Requesting RUIM unlock…</string>
    <string name="requesting_puk_unlock">Requesting PUK unlock…</string>
    <string name="unlock_failed">SIM Network unlock request unsuccessful.</string>
    <string name="nw_subset_unlock_failed">SIM Network Subset unlock request unsuccessful.</string>
    <string name="sp_unlock_failed">SIM Service Provider unlock request unsuccessful.</string>
    <string name="corporate_unlock_failed">SIM Corporate unlock request unsuccessful.</string>
    <string name="sim_unlock_failed">SIM unlock request unsuccessful.</string>
    <string name="rnw1_unlock_failed">RUIM Network1 unlock request unsuccessful.</string>
    <string name="rnw2_unlock_failed">RUIM Network2 unlock request unsuccessful.</string>
    <string name="rhrpd_unlock_failed">RUIM Hrpd unlock request unsuccessful.</string>
    <string name="rsp_unlock_failed">RUIM Service Provider unlock request unsuccessful.</string>
    <string name="rc_unlock_failed">RUIM Corporate unlock request unsuccessful.</string>
    <string name="ruim_unlock_failed">RUIM unlock request unsuccessful.</string>
    <string name="puk_unlock_failed">PUK unlock unsuccessful.</string>
    <string name="unlock_success">SIM Network unlock successful.</string>
    <string name="nw_subset_unlock_success">SIM Network Subset unlock successful.</string>
    <string name="sp_unlock_success">SIM Service Provider unlock successful.</string>
    <string name="corporate_unlock_success">SIM Corporate unlock successful.</string>
    <string name="sim_unlock_success">SIM unlock successful.</string>
    <string name="rnw1_unlock_success">RUIM Network1 unlock successful.</string>
    <string name="rnw2_unlock_success">RUIM Network2 unlock successful.</string>
    <string name="rhrpd_unlock_success">RUIM Hrpd unlock successful.</string>
    <string name="rsp_unlock_success">RUIM Service Provider unlock successful.</string>
    <string name="rc_unlock_success">RUIM Corporate unlock successful.</string>
    <string name="ruim_unlock_success">RUIM unlock successful.</string>
    <string name="puk_unlock_success">PUK unlock successful.</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings…</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="labelCF">Call forwarding</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Network Mode</string>
    <string name="data_enabled">Data enabled</string>
    <string name="data_enable_summary">Enable data access over Mobile network</string>
    <string name="roaming">Data roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="network_settings_sel_sub">SUBS Settings</string>
    <string name="summary_manage_subscriptions">Manage Network settings of each subscriptions</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="callind_multi_sim">Call settings</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="voice_privacy">Voice privacy</string>
    <string name="voice_privacy_summary">Enable enhanced privacy mode</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="xdivert_title">X-Divert</string>
    <string name="xdivert_summary">CFNRc Settings</string>
    <string name="sub1LineNumber">Sub1 Number :</string>
    <string name="sub2LineNumber">Sub2 Number :</string>
    <string name="proceed">Proceed</string>
    <string name="voicemail_provider">Service</string>
    <string name="voicemail_settings">Setup</string>
    <string name="other_settings">Other call settings</string>
    <string name="ims_settings">4G Call Settings</string>
    <string name="ims_edit_title">IMS account details</string>
    <string name="ims_accounts_title">IMS Account</string>
    <string name="call_type">CallType</string>
    <string name="mo_call_type_title">MO Call Type</string>
    <string name="ims_service_capability">Enable/Disable Service Capability</string>
    <string name="default_call_type">CSVoice</string>
    <string name="ims_call_type_control">ImsCallTypeCapabilityControl</string>
    <string name="ims_service_capability_title">Enable/Disable IMS Service Capability</string>
    <string name="ims_reg_title">Call priority</string>
    <string name="default_ims_reg_state">4G call</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" />
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="preference_category_ringtone">Ringtone &amp; Vibrate</string>
    <string name="proximity_mode_title">Turn on proximity sensor</string>
    <string name="proximity_on_summary">When you answer a call, the screen will be turned off to save power.</string>
    <string name="preferred_duration_title">Display duration</string>
    <string name="duration_enable_summary">Display duration is ON</string>
    <string name="duration_disable_summary">Display duration is OFF</string>
    <string name="vibrate_after_connected_title">Vibrating after connected</string>
    <string name="vibrate_after_connected_summary">Vibrate when answers</string>
    <string name="call_barring">Call barring</string>
    <string name="emergency_call_list_title">Emergency Call List</string>
    <string name="ipcall_sub_title">IP call setting</string>
    <string name="ipcall_sub_summery">Edit the IP prefix for IP call</string>
    <string name="speed_dial_setting">Speed dial settings</string>
    <string name="CFActivate">Activate</string>
    <string name="CFDeactivate">Deactivate</string>
    <string name="uplmn_list_setting_title">Preferred networks</string>
    <string name="preferred_lte">Enable 4G data only</string>
    <string name="preferred_lte_summary">When enable 4G data only, voice and SMS will not work</string>
</resources>