<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:phone="http://schemas.android.com/apk/res/com.android.phone" android:title="@string/call_settings">
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/emergency_call_list_title"
        android:key="emergency_call_list">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.EmergencyCallList"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/callind_multi_sim"
        android:key="button_call_independent_serv">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.SelectSubscription"/>
    </PreferenceScreen>
    <PreferenceCategory
        android:persistent="false"
        android:title="@string/other_settings"
        android:key="button_misc_category_key"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/vibrate_after_connected_title"
        android:key="button_vibrate_after_connected"
        android:summary="@string/vibrate_after_connected_summary"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/dtmf_tone_enable_title"
        android:key="button_play_dtmf_tone"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/proximity_mode_title"
        android:key="button_proximity_key"
        android:summary="@string/proximity_on_summary"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/auto_retry_mode_title"
        android:key="button_auto_retry_key"
        android:summary="@string/auto_retry_mode_summary"/>
    <ListPreference
        android:persistent="false"
        android:entries="@array/tty_mode_entries"
        android:title="@string/tty_mode_option_title"
        android:key="button_tty_mode_key"
        android:summary="@string/tty_mode_option_summary"
        android:entryValues="@array/tty_mode_values"/>
    <CheckBoxPreference
        android:persistent="true"
        android:title="@string/hac_mode_title"
        android:key="button_hac_key"
        android:summary="@string/hac_mode_summary"/>
    <ListPreference
        android:entries="@array/dtmf_tone_entries"
        android:title="@string/dtmf_tones_title"
        android:key="button_dtmf_settings"
        android:summary="@string/dtmf_tones_summary"
        android:entryValues="@array/dtmf_tone_values"/>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/xdivert_title"
        android:key="button_xdivert"
        android:summary="@string/xdivert_summary"/>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/speed_dial_setting"
        android:key="speed_dial_settings">
        <intent
            android:targetPackage="com.android.dialer"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.dialer.SpeedDialListActivity"/>
    </PreferenceScreen>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/preferred_duration_title"
        android:key="duration_enable_key"
        android:summaryOn="@string/duration_enable_summary"
        android:summaryOff="@string/duration_disable_summary"/>
</PreferenceScreen>
