<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:phone="http://schemas.android.com/apk/res/com.android.phone" android:title="@string/call_settings">
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/emergency_call_list_title"
        android:key="emergency_call_list">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.EmergencyCallList"/>
    </PreferenceScreen>
    <PreferenceCategory
        android:persistent="false"
        android:title="@string/preference_category_ringtone"
        android:key="button_ringtone_category_key">
        <com.android.phone.DefaultRingtonePreference
            android:persistent="false"
            android:title="@string/ringtone_title"
            android:key="button_ringtone_key"
            android:dialogTitle="@string/ringtone_title"
            android:ringtoneType="ringtone"/>
        <CheckBoxPreference
            android:persistent="false"
            android:title="@string/vibrate_on_ring_title"
            android:key="button_vibrate_on_ring"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/ipcall_sub_title"
        android:key="button_ipprefix_key"
        android:summary="@string/ipcall_sub_summery"/>
    <PreferenceCategory
        android:persistent="false"
        android:title="@string/other_settings"
        android:key="button_misc_category_key"/>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/voicemail"
        android:key="button_voicemail_category_key">
        <ListPreference
            android:persistent="true"
            android:title="@string/voicemail_provider"
            android:key="button_voicemail_provider_key"
            android:summary="@string/sum_voicemail_choose_provider"
            android:defaultValue=""/>
        <PreferenceScreen
            android:persistent="false"
            android:title="@string/voicemail_settings"
            android:key="button_voicemail_setting_key">
            <com.android.phone.EditPhoneNumberPreference
                android:persistent="false"
                android:singleLine="true"
                android:autoText="false"
                android:title="@string/voicemail_settings_number_label"
                android:key="button_voicemail_key"
                android:dialogTitle="@string/voicemail"
                phone:confirmMode="confirm"/>
        </PreferenceScreen>
        <RingtonePreference
            android:persistent="true"
            android:title="@string/voicemail_notification_ringtone_title"
            android:key="button_voicemail_notification_ringtone_key"
            android:defaultValue="content://settings/system/notification_sound"
            android:ringtoneType="notification"/>
        <CheckBoxPreference
            android:persistent="true"
            android:title="@string/voicemail_notification_vibrate_when_title"
            android:key="button_voicemail_notification_vibrate_key"/>
    </PreferenceScreen>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/vibrate_after_connected_title"
        android:key="button_vibrate_after_connected"
        android:summary="@string/vibrate_after_connected_summary"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/dtmf_tone_enable_title"
        android:key="button_play_dtmf_tone"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/proximity_mode_title"
        android:key="button_proximity_key"
        android:summary="@string/proximity_on_summary"/>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/respond_via_sms_setting_title"
        android:key="button_respond_via_sms_key"
        android:summary="@string/respond_via_sms_setting_summary">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.RespondViaSmsManager$Settings"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/fdn"
        android:key="button_fdn_key">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.FdnSetting"/>
    </PreferenceScreen>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/auto_retry_mode_title"
        android:key="button_auto_retry_key"
        android:summary="@string/auto_retry_mode_summary"/>
    <ListPreference
        android:persistent="false"
        android:entries="@array/tty_mode_entries"
        android:title="@string/tty_mode_option_title"
        android:key="button_tty_mode_key"
        android:summary="@string/tty_mode_option_summary"
        android:entryValues="@array/tty_mode_values"/>
    <CheckBoxPreference
        android:persistent="true"
        android:title="@string/hac_mode_title"
        android:key="button_hac_key"
        android:summary="@string/hac_mode_summary"/>
    <ListPreference
        android:entries="@array/dtmf_tone_entries"
        android:title="@string/dtmf_tones_title"
        android:key="button_dtmf_settings"
        android:summary="@string/dtmf_tones_summary"
        android:entryValues="@array/dtmf_tone_values"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/preferred_duration_title"
        android:key="duration_enable_key"
        android:summaryOn="@string/duration_enable_summary"
        android:summaryOff="@string/duration_disable_summary"/>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/labelGSMMore"
        android:key="button_gsm_more_expand_key"
        android:summary="@string/sum_gsm_call_settings">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.GsmUmtsCallOptions"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/labelCDMAMore"
        android:key="button_cdma_more_expand_key"
        android:summary="@string/sum_cdma_call_settings">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.CdmaCallOptions"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/speed_dial_setting"
        android:key="speed_dial_settings">
        <intent
            android:targetPackage="com.android.dialer"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.dialer.SpeedDialListActivity"/>
    </PreferenceScreen>
</PreferenceScreen>
