<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:phone="http://schemas.android.com/apk/res/com.android.phone" android:title="@string/mobile_networks">
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/network_settings_sel_sub"
        android:key="button_settings_manage_sub"
        android:summary="@string/summary_manage_subscriptions">
        <intent
            android:targetPackage="com.android.phone"
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.phone.SelectSubscription"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/cdma_lte_data_service"
        android:key="cdma_lte_data_service_key"/>
    <CheckBoxPreference
        android:persistent="false"
        android:title="@string/roaming"
        android:key="button_roaming_key"
        android:summaryOn="@string/roaming_enable"
        android:summaryOff="@string/roaming_disable"/>
</PreferenceScreen>
